# prime_gozal_derrick

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_dg3279/: __init__.py  prime_dg3279.py
tests/: test_prime_dg3279.py
