[tool.poetry]
name = "prime_dg3279"
version = "0.1.1"
description = "MDS package for determining which numbers are prime"
authors = ["Derrick Gozal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "1.0.0rc0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
